// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`containers/Search/Layout/Results > does not show ToggleResultsView for S3Object result type 1`] = `
<div>
  <div
    class="Results-root"
  >
    <div>
      Column Title: 
      5 results
    </div>
    <div
      class="Results-controls"
    >
      <div
        class="Results-controlsInner"
      >
        <div>
          Sort Selector
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`containers/Search/Layout/Results > renders error state 1`] = `
<div>
  <div
    class="Results-root"
  >
    <div>
      Column Title: 
    </div>
    <div
      class="Results-controls"
    >
      <div
        class="Results-controlsInner"
      >
        <ul
          data-selected="l"
        >
          <li
            data-value="t"
          >
            table icon
          </li>
          <li
            data-value="l"
          >
            list icon
          </li>
        </ul>
        <div>
          Sort Selector
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`containers/Search/Layout/Results > renders with FiltersButton when onFilters prop is provided 1`] = `
<div>
  <div
    class="Results-root"
  >
    <div>
      Column Title: 
      3 results
    </div>
    <div
      class="Results-controls"
    >
      <div
        class="Results-controlsInner"
      >
        <ul
          data-selected="l"
        >
          <li
            data-value="t"
          >
            table icon
          </li>
          <li
            data-value="l"
          >
            list icon
          </li>
        </ul>
        <button>
          Filters
        </button>
        <div>
          Sort Selector
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`containers/Search/Layout/Results > renders with data and shows number of results 1`] = `
<div>
  <div
    class="Results-root"
  >
    <div>
      Column Title: 
      5 results
    </div>
    <div
      class="Results-controls"
    >
      <div
        class="Results-controlsInner"
      >
        <ul
          data-selected="l"
        >
          <li
            data-value="t"
          >
            table icon
          </li>
          <li
            data-value="l"
          >
            list icon
          </li>
        </ul>
        <div>
          Sort Selector
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`containers/Search/Layout/Results > renders with loading state 1`] = `
<div>
  <div
    class="Results-root"
  >
    <div>
      Column Title: 
      <div>
        Loading…
      </div>
    </div>
    <div
      class="Results-controls"
    >
      <div
        class="Results-controlsInner"
      >
        <ul
          data-selected="l"
        >
          <li
            data-value="t"
          >
            table icon
          </li>
          <li
            data-value="l"
          >
            list icon
          </li>
        </ul>
        <div>
          Sort Selector
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`containers/Search/Layout/Results > shows Create Package button in bucket 1`] = `
<div>
  <div
    class="Results-root"
  >
    <div>
      Column Title: 
      5 results
    </div>
    <div
      class="Results-controls"
    >
      <button>
        <span
          class="Results-label"
        >
          Create new package
        </span>
      </button>
      Don't forget to render dialog
      <div
        class="Results-controlsInner"
      >
        <ul
          data-selected="l"
        >
          <li
            data-value="t"
          >
            table icon
          </li>
          <li
            data-value="l"
          >
            list icon
          </li>
        </ul>
        <div>
          Sort Selector
        </div>
      </div>
    </div>
  </div>
</div>
`;
